# udemy_esp32

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig
main/: CMakeLists.txt  DHT22.c  DHT22.h  app_nvs.c  app_nvs.h  aws_iot.c  aws_iot.h  http_server.c  http_server.h  main.c  rgb_led.c  rgb_led.h  sntp_time_sync.c  sntp_time_sync.h  tasks_common.h  wifi_app.c  wifi_app.h  wifi_reset_button.c  wifi_reset_button.h
main/webpage/: app.css  app.js  index.html  jquery-3.3.1.min.js
